--- a/layout/banner.ejs
+++ b/layout/banner.ejs
@@ -12,7 +12,9 @@
     <img src="../assets/images/circle.png" alt="circle圖" class="home-banner-circle  d-block d-lg-none my-32 mx-auto">
     <!-- 手機板title -->
     <div class="col-12 col-lg-6 banner-title block d-lg-none mb-32">
-      <h2 class="font-shrikhand text-center lh-base">ALPHABOX+</h2>
+      <h2 class="font-shrikhand text-center lh-base">
+        A&emsp;L&emsp;P&emsp;H&emsp;A&emsp;B&emsp;O&emsp;X&emsp;+
+      </h2>
       <h3 class="fs-6 letter-spacing-16 text-center lh-base">擁抱未來科技，專屬您的3D立體投影陪伴機器人</h3>
     </div>
     <!-- 桌面版圓 -->
