--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -88,10 +88,14 @@
   h2 {
     font-size: 32px;
   }
+  @media (max-width: 1200px) {
+    h2 {
+      font-size: 20px;
+    }
+  }
   @media (max-width: 992px) {
     h2 {
       font-size: 20px;
-      letter-spacing: 16px;
     }
     h3 {
       letter-spacing: 4.8px;
