增加註冊頁面

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -17,3 +17,5 @@
 @import './utils/custom-color';
 @import './layout/header.scss';
 @import './layout/footer.scss';
+// AWEI 客製化檔案
+@import './pages/registr';
