--- a/assets/scss/base/_fontStyle.scss
+++ b/assets/scss/base/_fontStyle.scss
@@ -9,9 +9,9 @@
 .font-saira {
   font-family: "Saira Extra Condensed", sans-serif;
 }
-* {
-  // outline: 1px solid red;
-}
+// * {
+//   outline: 1px solid red;
+// }
 .test {
   outline: 1px solid red;
 }
