--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -315,6 +315,7 @@ $primary-200: #7000FF;
 $primary-300: #6e01F8;
 $primary-400: #380C7E;
 $primary-500: #1F0F39;
+$primary-600: #28085C;
 $black: #000000;
 $primary-dark: #11002d;
 
@@ -405,6 +406,7 @@ $spacers: (
   10: $spacer * .625,
   12: $spacer * .75,
   16: $spacer,
+  18: $spacer * 0.88,
   20: $spacer * 1.25,
   24: $spacer * 1.5,
   32: $spacer * 2,
@@ -641,6 +643,8 @@ $font-sizes: (
   6: $h6-font-size,
   24 : 24px,
   40 : 40px,
+  128: 128px,
+  400: 400px
 ) !default;
 // scss-docs-end font-sizes
 
