--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,21 +1,22 @@
-<footer class="container d-flex justify-content-between align-items-center my-48">
+<footer class="container d-flex flex-column flex-md-row justify-content-start justify-content-md-between align-items-md-center my-40 my-md-48">
     <div>
-        <h2 class="font-shrikhand fs-4">ALPHBOX+</h2>
-        <p class="font-noto-sans fw-bold">Copyright © 2023 Hexschool.</p>
+        <h2 class="font-shrikhand fs-4  mb-8 mb-md-0">ALPHBOX+</h2>
+        <p class="font-noto-sans fw-bold d-none d-md-block">Copyright © 2023 Hexschool.</p>
     </div>
-    <img src="../assets/images/emergency-black.png" alt="">
-    <ul class="d-flex justify-content-between list-unstyled fw-bold">
-        <li class="me-24">
+    <img class="footer-icon mb-8 mb-md-0" src="../assets/images/emergency-black.png" alt="">
+    <ul class="d-flex flex-column flex-md-row list-unstyled fw-bold">
+        <li class="me-24 mb-8 mb-md-0">
             <a class="text-dark" href="javascript:;">關於他們</a>
         </li>
-        <li class="me-24">
+        <li class="me-24 mb-8 mb-md-0">
             <a class="text-dark"  href="javascript:;">產品資訊</a>
         </li>
-        <li class="me-24">
+        <li class="me-24 mb-8 mb-md-0">
             <a class="text-dark"  href="javascript:;">常見問題</a>
         </li>
-        <li>
+        <li class="mb-8 mb-md-0">
             <a class="text-dark"  href="javascript:;">隱私政策</a>
         </li>
+        <p class="font-noto-sans fw-bold d-block d-md-none">Copyright © 2023 Hexschool.</p>
     </ul>
 </footer>
