--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -28,7 +28,7 @@
           <!-- 右 -->
           <ul class="navbar-nav gap-8 pb-16 pb-lg-0 gap-lg-8">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">註冊</a>
+              <a class="nav-link text-white text-center" href="register.html">註冊</a>
             </li>
             <li class="nav-item me-lg-8">
               <a class="nav-link text-white text-center" href="#">登入</a>
