--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -43,8 +43,8 @@
     &:hover{
         background-color:  #00000080;
     }
-    font-size: 400px;
-    font-weight: 300;
+    // font-size: 400px;
+    // font-weight: 300;
 }
 
 .line-arrow{
