--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -31,3 +31,9 @@
     width: 155px;
     height: 24px;
 }
+
+.share-swiper {
+    .swiper-scrollbar {
+        background: rgba(255, 255, 255, 0.2);
+    }
+}
