--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -16,7 +16,7 @@
               <a class="nav-link text-white text-center" aria-current="page" href="about-us.html">關於我們</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">最新消息</a>
+              <a class="nav-link text-white text-center" href="../pages/news.html">最新消息</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="#">FAQ</a>
