--- a/assets/scss/pages/_registr.scss
+++ b/assets/scss/pages/_registr.scss
@@ -21,23 +21,29 @@
 }
 
 
-.or{
+.or{ 
     &::before{
         content: "";
-        position: absolute;
         top:20px;
         left: 0px;
         display: inline-block;;
         height: 1px;
         width: 164px;
         background-color:#828282;
+        vertical-align:middle;
+        @media(min-width:768px){
+            width: 170px;
+        }
     }
     &::after{
         content: "";
-        position: absolute;
         display: inline-block;;
         height: 1px;
         width: 164px;
         background-color:#828282;
+        vertical-align:middle;
+        @media(min-width:768px){
+            width: 170px;
+        }
     }
 }
